--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1>Welcome To My Website!</h1>
+<h1>Welcome to my awesome website</h1>
 <br>
-<p>Welcome to my awesome website</p>
+<p>Here is some example text in my website</p>
